remove inline styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/pure-forms.css" />
   </head>
   <body>
-    <div style="padding: 15px;">
+    <div class="container">
       <div id="option_adding">
         <h1>hi</h1>
         <form class="pure-form" onsubmit="return false;">
@@ -17,10 +17,10 @@
           <button id="roll_button" class="pure-button pure-button-primary pure-button-disabled">roll</button>
         </form>
       </div>
-      <div id="option_showing" style="margin-top: 15px;">
+      <div id="option_showing">
 
       </div>
-      <div id="history_showing" style="padding-top: 15px;" class="pure-form">
+      <div id="history_showing" class="pure-form">
 
       </div>
     </div>
