--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
           <button id="roll_button" class="pure-button pure-button-primary pure-button-disabled">roll</button>
         </form>
       </div>
-      <div id="option_showing">
-
-      </div>
-      <div id="history_showing" class="pure-form">
-
-      </div>
+      <div id="option_showing"></div>
+      <div id="history_showing" class="pure-form"></div>
     </div>
-    <div id="result_showing">
-    </div>
+    <div id="result_showing"></div>
 
     <script type="text/javascript" src="./js/jsDecider.js"></script>
   </body>
