--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>rnd</title>
+    <title>Decider</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/pure.css" />
     <link rel="stylesheet" href="./css/pure-button.css" />
